crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__projects_groups__projects_info__plain.snap
---
source: crates/engram-cli/tests/cli/snapshot/projects_groups.rs
expression: f.run(& all)
---
$ engramdb --no-maintenance --dir [PROJECT] --format plain projects info
exit: 0
--- stdout ---
Project: workspace
ID: [PROJECT_ID]
Path: [PROJECT]
Memories: 3
Created: [TIMESTAMP]
--- stderr ---
